--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "postversion" : "git push && git push --tags",
     "test": "jest --config jestconfig.json",
     "build": "tsc",
-    "lint": "eslint --ext .ts .",
-    "lint:fix": "eslint --fix --ext .ts ."
+    "lint": "eslint --ext .ts ./src",
+    "lint:fix": "eslint --fix --ext .ts ./src"
   },
   "files": [
     "lib/**/*"
