--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guid-ts",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "NPM package for generating and managing globally unique identifiers (GUIDs)",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -13,14 +13,15 @@
     "test": "jest --config jestconfig.json",
     "build": "tsc",
     "lint": "eslint --ext .ts ./src",
-    "lint:fix": "eslint --fix --ext .ts ./src"
+    "lint:fix": "eslint --fix --ext .ts ./src",
+    "docs": "typedoc src"
   },
   "files": [
     "lib/**/*"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/piraces/guid.git"
+    "url": "git+https://github.com/piraces/guid-ts.git"
   },
   "keywords": [
     "typescript",
@@ -32,9 +33,9 @@
   "author": "Raúl Piracés Alastuey <raul@piraces.dev> (https://piraces.dev)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/piraces/guid/issues"
+    "url": "https://github.com/piraces/guid-ts/issues"
   },
-  "homepage": "https://github.com/piraces/guid#readme",
+  "homepage": "https://github.com/piraces/guid-ts#readme",
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
@@ -46,6 +47,7 @@
     "jest": "^25.4.0",
     "prettier": "^2.0.5",
     "ts-jest": "^25.4.0",
+    "typedoc": "^0.17.6",
     "typescript": "^3.8.3"
   }
 }
