--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
       "outDir": "./lib",
       "strict": true
     },
+    "typedocOptions": {
+      "mode": "modules",
+      "out": "docs",
+      "exclude": "**/*+(e2e|spec|test).ts"
+    },
     "include": ["src"],
     "exclude": ["node_modules", "**/__tests__/*"]
 }
