--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,10 +1,10 @@
 # Path to sources
 sonar.sources=src
 sonar.exclusions=docs
-sonar.inclusions=src
+sonar.inclusions=src/**/*
 
 # Path to tests
-sonar.tests=src/__tests__
+sonar.tests=src/__tests__/*
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
