--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -4,7 +4,7 @@ sonar.exclusions=docs
 sonar.inclusions=src/**/*
 
 # Path to tests
-sonar.tests=src/__tests__/*
+sonar.tests=src/__tests__
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
