--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,7 +1,7 @@
 # Path to sources
 sonar.sources=src
 sonar.exclusions=docs
-sonar.inclusions=src/**/*
+sonar.inclusions=src/*
 
 # Path to tests
 sonar.tests=src/__tests__
