Add test coverage

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,6 +1,6 @@
 # Path to sources
 sonar.sources=src
-sonar.exclusions=docs
+sonar.exclusions=docs,coverage/lcov-report/*
 sonar.inclusions=src/*
 
 # Path to tests
